# taury-crm

./: .gitignore  DEPLOYMENT.md  Export de tarification, 23 juil 2025.xlsx  GITHUB_ACTIONS_GUIDE.md  README.md  deploy-raspberry-pi-docker.sh  deploy-raspberry-pi.sh
.github/workflows/: build.yml  deploy.yml  release.yml  security.yml  test.yml
backend-app/: .gitignore  README.md  docker-compose.yml
backend-app/backend-api/: .dockerignore  Cargo.toml  Dockerfile  README.md
backend-app/backend-api/src/: db.rs  handlers.rs  main.rs  models.rs  sync_service.rs
backend-app/sidecar-python/: README.md  Test.xlsx  api.py  build-sidecar.sh  doc-generator.spec  requirements.txt  template.docx
frontend-app/: .eslintignore  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend-app/src/: App.tsx  index.css
frontend-app/src-tauri/: Cargo.toml  tauri.conf.json
frontend-app/src-tauri/icons/: icon.icns
frontend-app/src-tauri/src/: main.rs  sidecar.rs
frontend-app/src-tauri/src/auth/: mod.rs
frontend-app/src-tauri/src/commands/: auth_commands.rs  company_commands.rs  customer_commands.rs  document_commands.rs  document_generator.rs  invoice_commands.rs  mod.rs  proposal_commands.rs  sync_commands.rs
frontend-app/src-tauri/src/db/: mod.rs  models.rs  queries.rs  schema.rs
frontend-app/src-tauri/src/models/: invoice.rs  mod.rs
frontend-app/src/components/: Layout.tsx
frontend-app/src/contexts/: AuthContext.tsx  SyncContext.tsx
frontend-app/src/pages/: Companies.tsx  Customers.tsx  Dashboard.tsx  Documents.tsx  Invoices.tsx  Login.tsx  Pricing.tsx  Proposals.tsx  Settings.tsx
